Fri Nov  1 13:18:40 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): update for new tl_data
 	semantics [krb5-admin/140]

Mon Oct 21 16:28:52 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c (kadm5_modify_principal): fix modify_principal's
 	handling of KADM5_TL_DATA [krb5-admin/20]

Fri Oct 18 14:24:12 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_misc_free.c, server_dict.c, adb_policy.c, adb_free.c:
 	include stdlib.h instead of malloc.h [krb5-admin/35]

	* adb_openclose.c (osa_adb_rename_db): create the destination
 	database if necessary before renaming [krb5-admin/58]

Thu Oct 17 16:22:07 1996  Barry Jaspan  <bjaspan@mit.edu>

	* svr_principal.c: update for new pw_expiration semantics
 	[krb5-admin/87]

Tue Oct  8 13:33:48 1996  Barry Jaspan  <bjaspan@mit.edu>

	* adb_policy.c (osa_adb_rename_policy_db): rename
 	osa_adb_rename_policy to *_db

	* adb_openclose.c, adb_policy.c: implement database renaming;
 	also, only create a db lockfile after the database has been
 	successfully created [krb5-admin/62]

Fri Oct  4 08:40:21 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* svr_principal.c (kadm5_get_principal): Do not assume malloc(0)
		returns non-NULL. [krb5-admin/29]

Fri Aug  2 14:07:31 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>

	* svr_principal.c: remove krb5_free_keyblock_contents (moved to
        libkrb5.a)

Fri Jul 26 17:48:14 1996  Sam Hartman  <hartmans@mit.edu>

	* svr_principal.c (krb5_copy_key_data_contents): If
 	key_data_length[i] == 0, don't complain if malloc(0) returns 0;
 	this is allowed by ANSI.

Thu Jul 25 18:42:47 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in (LIBS): Link against -ldb under AIX for shared
 	library construction; we should eventually make libdb a shared
 	library.

Wed Jul 24 18:21:28 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in, configure.in: break out server lib into a
		subdirectory
