@@ -1,3 +1,8 @@
+Wed Nov  6 16:22:05 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* svr_principal.c (kadm5_modify_principal): don't free the
+ 	caller's tl_data (oops)
+
 Fri Nov  1 13:18:40 1996  Barry Jaspan  <bjaspan@mit.edu>
 
 	* svr_principal.c (kadm5_modify_principal): update for new tl_data
